Use formatted method for string